--- a/src/Thruster/Thruster.csproj
+++ b/src/Thruster/Thruster.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp2.1</TargetFrameworks>
-    <LangVersion>7.3</LangVersion>
+    <TargetFrameworks>netstandard2.0;netcoreapp2.1;net452</TargetFrameworks>
     <AssemblyName>Thruster</AssemblyName>
     <RootNamespace>Thruster</RootNamespace>
     <AssemblyTitle>Thruster</AssemblyTitle>
