--- a/src/Thruster.Tests/Thruster.Tests.csproj
+++ b/src/Thruster.Tests/Thruster.Tests.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
 
   <ItemGroup>
