--- a/src/Thruster.Benchmarks/Thruster.Benchmarks.csproj
+++ b/src/Thruster.Benchmarks/Thruster.Benchmarks.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,12 +8,7 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.0" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Thruster">
-      <HintPath>..\Thruster\bin\Release\netcoreapp2.1\Thruster.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Thruster" Version="1.0.0-alpha0007" />
   </ItemGroup>
 
 </Project>
