--- a/src/Thruster.ThreadedApp/Thruster.ThreadedApp.csproj
+++ b/src/Thruster.ThreadedApp/Thruster.ThreadedApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Thruster\Thruster.csproj" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
