Benchmarks showing not that much difference from the Kestrel pool

--- a/src/Thruster.Benchmarks/Thruster.Benchmarks.csproj
+++ b/src/Thruster.Benchmarks/Thruster.Benchmarks.csproj
@@ -9,10 +9,17 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions" Version="2.1.2" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Thruster\Thruster.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.IO.Pipelines">
+      <HintPath>..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\system.io.pipelines\4.5.0\ref\netstandard1.3\System.IO.Pipelines.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
